services/coub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couber
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: {}
  template:
    metadata: {}
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
      - name: couber
        image: ghcr.io/erebe/couber:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: videos
          mountPath: /home/app/data
      volumes:
      - name: videos
        persistentVolumeClaim:
          claimName: couber-pv-claim
