services/coub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couber
spec:
  ports:
    - protocol: TCP
      port: 8081
  clusterIP: None
  type: ClusterIP
