services/coub/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coub
spec:
  parentRefs:
    - name: envoy
  hostnames:
    - coub.erebe.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: couber
          port: 8081
      timeouts:
        request: "10m"
